# benzema216-council

./: .gitignore  README.md  active_context.md  pyproject.toml
examples/: portfolio.yaml
skill/: skill.md
src/benzema216_council/: __init__.py  __main__.py  cli.py  display.py  engine.py  masters.py  models.py
